Mention missing Darwin binaries from releases

--- a/README.adoc
+++ b/README.adoc
@@ -138,6 +138,11 @@ of it from https://github.com/doronbehar/pistol/releases[the releases page],
 available since version `0.3.1`. The releases assets include also the manual
 page `pistol.1.gz`.
 
+WARNING: Currently, Darwin compatible binaries are not available there, but it
+should be possible to generate them via CI. All other binaries were cross
+compiled from my own `x86_64` linux machine, using Nix' superb
+https://nix.dev/tutorials/cross-compilation[cross compilation support].
+
 NOTE: For a statically compiled Pistol to be functional, it needs to read a `libmagic` database
 (usually found in `/usr/share/misc/magic.mgc`) and the static executable
 includes the contents of this database found on https://github.com/NixOS/nixpkgs/blob/nixos-unstable/pkgs/tools/misc/file/default.nix[Nixpkgs'
@@ -148,9 +153,6 @@ Hence using this executable might not be desirable due to this behaviour which
 a regular compilation of `pistol` does not include. This behaviour is compiled
 into `pistol` if you use `go {build,install}` with `-tags EMBED_MAGIC_DB`.
 
-Nix' superb https://nix.dev/tutorials/cross-compilation[cross compilation
-support] helped me a lot regarding supplying those cross compiled binaries in
-pistol's releases.
 
 === From Source
 
